read rsa key par from .pem files
reference article https://www.danvega.dev/blog/spring-security-jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.oauth2.server.resource=TRACE
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security.oauth2.jwt=DEBUG
+
+rsa.private-key= classpath:certs/private.pem
+rsa.public-key= classpath:certs/public.pem
