--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.application.name=authentication
 server.port= 9000
 spring.security.oauth2.authorization-server.issuer-url= http://localhost:9000
 
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=TRACE
 logging.level.org.springframework.security.oauth2.server.resource=TRACE
 logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security.oauth2.jwt=DEBUG
+logging.level.org.springframework.security.oauth2.jwt=TRACE
 
 rsa.private-key= classpath:certs/private.pem
 rsa.public-key= classpath:certs/public.pem
+
+spring.security.oauth2.authorizationserver.access-token-format=self-contained
