refresh token init commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ rsa.private-key= classpath:certs/private.pem
 rsa.public-key= classpath:certs/public.pem
 
 spring.security.oauth2.authorizationserver.access-token-format=self-contained
+
+security.oauth2.authorizationserver.client.spring.registration.authorization-grant-types=authorization_code,refresh_token,client_credentials
+security.oauth2.authorizationserver.client.spring.registration.redirect-uris=https://127.0.0.1:9443/,https://127.0.0.1:9443/login/oauth2/code/spring
+security.oauth2.authorizationserver.client.spring.registration.post-logout-redirect-uris=http://127.0.0.1:8080/
+security.oauth2.authorizationserver.client.spring.registration.scopes=openid,profile,email
+security.oauth2.authorizationserver.client.spring.require-authorization-consent=true
