--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,15 @@
-spring.application.name=authentication
+server.port=9000
 
-server.port= 9000
-spring.security.oauth2.authorization-server.issuer-url= http://localhost:9000
+logging.level.org.springframework.security=trace
 
-logging.level.org.springframework.security=TRACE
-logging.level.org.springframework.security.oauth2.server.resource=TRACE
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.security.oauth2.jwt=TRACE
+#spring.security.user.name=user1
+#spring.security.user.password=password
 
-rsa.private-key= classpath:certs/private.pem
-rsa.public-key= classpath:certs/public.pem
-
-spring.security.oauth2.authorizationserver.access-token-format=self-contained
-
-security.oauth2.authorizationserver.client.spring.registration.authorization-grant-types=authorization_code,refresh_token,client_credentials
-security.oauth2.authorizationserver.client.spring.registration.redirect-uris=https://127.0.0.1:9443/,https://127.0.0.1:9443/login/oauth2/code/spring
-security.oauth2.authorizationserver.client.spring.registration.post-logout-redirect-uris=http://127.0.0.1:8080/
-security.oauth2.authorizationserver.client.spring.registration.scopes=openid,profile,email
-security.oauth2.authorizationserver.client.spring.require-authorization-consent=true
+spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-id=oidc-client
+spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-secret={noop}secret
+spring.security.oauth2.authorizationserver.client.messaging-client.registration.client-authentication-methods=client_secret_basic
+spring.security.oauth2.authorizationserver.client.messaging-client.registration.authorization-grant-types=authorization_code,refresh_token,client_credentials
+spring.security.oauth2.authorizationserver.client.messaging-client.registration.redirect-uris=http://localhost:3000/api/auth/callback/spring
+spring.security.oauth2.authorizationserver.client.messaging-client.registration.post-logout-redirect-uris=http://localhost:3000/
+spring.security.oauth2.authorizationserver.client.messaging-client.registration.scopes=openid,profile,message.read,message.write
+#spring.security.oauth2.authorizationserver.client.messaging-client.require-authorization-consent=true
